<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:visibility="gone"
    android:background="@color/colorWhite"
    android:focusableInTouchMode="true"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textViewNum"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_25dp"
        android:background="@color/color_F6F6F6"
        android:gravity="center"
        tools:text="@string/app_name"
        android:textColor="@color/color_939393"
        android:textSize="@dimen/size_11dp" />


    <RelativeLayout
        android:id="@+id/relativeLayoutVIP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_15dp"
        android:layout_marginTop="@dimen/size_10dp"
        android:layout_marginRight="@dimen/size_15dp"
        android:background="@drawable/app_confirm_im_bg"
        android:padding="@dimen/size_10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/textViewVipTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/size_15dp"
            android:layout_marginRight="@dimen/size_15dp"
            android:text="开通会员本单立减4元"
            android:textColor="@color/white"
            android:textSize="@dimen/size_16dp" />

        <ImageView
            android:id="@+id/imVipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="right"
            android:src="@mipmap/ic_go_open" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_15dp"
            android:padding="@dimen/size_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_15dp"
                android:text="@string/commodityAmount"
                android:textColor="@color/app_black"
                android:textSize="@dimen/size_11dp" />

            <TextView
                android:id="@+id/commodityAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size_15dp"
                android:gravity="right"
                android:textColor="@color/app_black"
                android:textSize="@dimen/size_11dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_self_sufficiency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_15dp"
                android:text="@string/distributionFee"
                android:textColor="@color/app_black"
                android:textSize="@dimen/size_11dp" />

            <TextView
                android:id="@+id/distributionFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_10dp"
                android:textColor="@color/color_939393"
                android:textSize="@dimen/size_11dp" />

            <TextView
                android:id="@+id/distributionFeePrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size_15dp"
                android:gravity="right"
                android:textColor="@color/app_black"
                android:textSize="@dimen/size_11dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vipSubtractionLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_15dp"
                android:text="@string/vipSubtraction"
                android:textColor="@color/app_black"
                android:textSize="@dimen/size_11dp" />

            <TextView
                android:id="@+id/vipSubtraction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_10dp"
                android:background="@drawable/app_vipsubtraction_bg"
                android:paddingLeft="@dimen/size_10dp"
                android:paddingRight="@dimen/size_10dp"
                android:textColor="@color/color_DA673D"
                android:textSize="@dimen/size_13dp"
                android:visibility="gone" />

            <TextView

                android:id="@+id/vipSubtractionPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size_15dp"
                android:gravity="right"
                android:textColor="@color/color_F6551A"
                android:textSize="@dimen/size_11dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/subtractionActivitiesLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_15dp"
                android:text="@string/vipSubtractionActivity"
                android:textColor="@color/app_black"
                android:textSize="@dimen/size_11dp" />

            <TextView
                android:id="@+id/subtractionActivities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_10dp"
                android:background="@drawable/app_vipsubtraction_bg"
                android:paddingLeft="@dimen/size_10dp"
                android:paddingRight="@dimen/size_10dp"
                android:textColor="@color/color_DA673D"
                android:textSize="@dimen/size_13dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/subtractionActivitiesPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size_15dp"
                android:gravity="right"
                android:textColor="@color/color_F6551A"
                android:textSize="@dimen/size_11dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutCoupons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_15dp"
                android:text="@string/textCoupons"
                android:textColor="@color/app_black"
                android:textSize="@dimen/size_11dp" />

            <TextView
                android:id="@+id/textCoupons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/size_15dp"
                android:drawablePadding="@dimen/size_11dp"

                android:gravity="right"
                android:textColor="@color/app_black"
                android:textSize="@dimen/size_11dp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/couponsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/noData"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:text="暂无优惠劵" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:layout_marginTop="@dimen/size_5dp"
            android:background="@color/color_F6F6F6" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_10">

            <TextView
                android:id="@+id/commodity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/payMoney"
                android:layout_marginRight="@dimen/size_15dp"
                android:layout_toLeftOf="@+id/payMoney"
                android:text="共1件商品 小计"
                android:textColor="@color/app_black"
                android:textSize="@dimen/size_11dp" />

            <TextView
                android:id="@+id/payMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/size_15dp"
                android:textColor="@color/color_F6551A"
                android:textSize="@dimen/size_22dp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_70dp"
            android:layout_marginLeft="@dimen/size_15dp"
            android:layout_marginRight="@dimen/size_15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/app_my_wallet_bg"
            android:gravity="left"
            android:hint="@string/editTextHint"
            android:padding="@dimen/size_5dp"
            android:paddingBottom="@dimen/size_5dp"
            android:textColor="@color/app_black"
            android:textColorHint="@color/color_979797"
            android:textSize="@dimen/size_11dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_1dp"
        android:background="@color/app_line_gray" />

</LinearLayout>