<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"

        android:orientation="horizontal">


        <ImageView
            android:id="@+id/iv_login_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:src="@mipmap/ic_landing_dele" />

        <TextView
            android:id="@+id/tv_edit_address_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="13dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tvLanding"
            android:textColor="@color/app_black"
            android:textSize="16dp" />

        <LinearLayout
android:id="@+id/ll_change_type"
            android:layout_width="40dp"
            android:layout_height="40dp">

            <ImageView
                android:id="@+id/iv_change_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:scaleType="fitXY"
                android:src="@mipmap/change_login_type" />
        </LinearLayout>

    </LinearLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_tool"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_30dp"
                    android:layout_marginTop="@dimen/size_50dp"
                    android:layout_marginRight="@dimen/size_30dp">

                    <EditText
                        android:id="@+id/edit_login_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:drawableLeft="@mipmap/ic_landing_iphone"
                        android:drawablePadding="@dimen/size_15dp"
                        android:hint="@string/inputPhone"
                        android:inputType="number"
                        android:maxLength="11"
                        android:textColor="#232131"
                        android:textColorHint="@color/color_CACACB"
                        android:textSize="@dimen/size_14dp" />

                    <LinearLayout
                        android:id="@+id/linIphone"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/edit_login_account"
                        android:layout_marginLeft="@dimen/size_25dp"
                        android:layout_marginTop="@dimen/size_5dp"
                        android:background="@color/color_BDBDBD"
                        android:orientation="vertical" />

                    <RelativeLayout
                        android:id="@+id/rl_login_account_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/edit_login_account"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="@dimen/size_5dp"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="18dp"
                            android:layout_height="12dp"
                            android:src="@mipmap/ic_login_delete" />
                    </RelativeLayout>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_30dp"
                    android:layout_marginTop="@dimen/size_30dp"
                    android:layout_marginRight="@dimen/size_30dp"
                    android:background="@color/white">

                    <EditText
                        android:id="@+id/edit_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:drawableLeft="@mipmap/ic_landing_psd"
                        android:drawablePadding="@dimen/size_15dp"
                        android:hint="@string/inputPsd"
                        android:inputType="textEmailAddress"
                        android:maxLength="16"
                        android:singleLine="true"
                        android:textColor="#232131"
                        android:textColorHint="@color/color_CACACB"
                        android:textSize="@dimen/size_14dp" />

                    <LinearLayout
                        android:id="@+id/linPsd"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/edit_login_password"
                        android:layout_marginLeft="@dimen/size_25dp"
                        android:layout_marginTop="@dimen/size_5dp"
                        android:background="#EFEFEF"
                        android:orientation="vertical" />

                    <RelativeLayout
                        android:id="@+id/rl_login_password_display"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/edit_login_password"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="@dimen/size_5dp">

                        <ImageView
                            android:id="@+id/iv_login_password_display"
                            android:layout_width="18dp"
                            android:layout_height="12dp"

                            android:src="@mipmap/ic_login_hide" />
                    </RelativeLayout>
                </RelativeLayout>


                <ImageView
                    android:id="@+id/btn_login_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_30dp"
                    android:src="@mipmap/ic_button_landing" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/size_30dp"
                    android:layout_marginTop="@dimen/size_15dp"
                    android:layout_marginRight="@dimen/size_30dp">

                    <TextView
                        android:id="@+id/tv_login_forget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/size_10dp"
                        android:text="忘记密码"
                        android:textColor="#7A7A7A"
                        android:textSize="@dimen/dp_10" />

                    <TextView
                        android:id="@+id/tv_login_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:padding="@dimen/size_10dp"
                        android:text="立即注册"
                        android:textColor="@color/color_FF5C01"
                        android:textSize="@dimen/dp_10" />
                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@mipmap/ic_alignbottom" />
</RelativeLayout>
